--- a/style.css
+++ b/style.css
@@ -62,10 +62,10 @@ h1 {
 }
 
 .boxb{
-	border: 10px solid #3FA2BA;
+	border: 10px solid #6E00BB;
 }
 .boxg{
-	border: 10px solid #ACD678;
+	border: 10px solid #BF0000;
 }
 .container .boxb .imgBox{
 	position: relative;
