--- a/style.css
+++ b/style.css
@@ -25,8 +25,88 @@ h1 {
   text-align: center;
   font-weight: lighter; 
 }
+/* <------------ nav css ------------->*/
+
+*{
+	margin: 0px;
+	padding: 0px;
+	font-family: Avenir, sans-serif;
+}
+
+nav{
+	width: 100%;
+	margin: 0 auto;
+	background-color: #000000;
+	position: sticky;
+	top: 0px;
+}
+
+nav ul{
+	list-style-type: none;
+}
+
+nav ul li{
+	float: left;
+	width: 25%;
+	text-align: center;
+}
 
 
+nav a{
+	display: block;
+	text-decoration: none;
+	color: black;
+	border-bottom: 2px solid transparent;
+	padding: 10px 0px;
+}
+
+nav a:hover{
+	color: #E60000;
+	border-bottom: 2px solid gold;
+}
+
+.sous{
+	display: none;
+	box-shadow:0px 1px 2px #E60000;
+	background-color: white;
+}
+
+nav > ul li:hover .sous{
+	display: block;
+}
+
+.sous li{
+	float: none;
+	width: 100%;
+	text-align:left;
+}
+
+.sous a{
+	padding: 10px
+	border-bottom:none;
+}
+
+.sous a:hover{
+	border-bottom: none;
+	background-color: rgba(200,200,200,0.5);
+}
+
+
+.sous{
+	display: none;
+	box-shadow: 0px 1px 2px #E60000;
+	background-color: black;
+	position: absolute;
+	width: 100%;
+	z-index: 1000;
+}
+
+nav ul li{
+	float: left;
+	width: 25%;
+	text-align: center;
+	position: relative;
+}
 /*<------------- article css --------------->*/
 
 .container{
