--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header{
   display: flex;
   align-items: center;
   padding-left: 1%;
-  padding-right: 20%;
+  padding-right: 2%;
   font-family:'Avenir'; 
 }
 
@@ -26,12 +26,6 @@ h1 {
   font-weight: lighter; 
 }
 /* <------------ nav css ------------->*/
-
-*{
-	margin: 0px;
-	padding: 0px;
-	font-family: Avenir, sans-serif;
-}
 
 nav{
 	width: 100%;
@@ -98,7 +92,7 @@ nav > ul li:hover .sous{
 	background-color: black;
 	position: absolute;
 	width: 100%;
-	z-index: 1000;
+	z-index: auto;
 }
 
 nav ul li{
@@ -108,20 +102,28 @@ nav ul li{
 	position: relative;
 }
 /*<------------- article css --------------->*/
-
 .container{
-  float: right;
+float: right;
   width: 80%;
   background:#fff;
   margin-left: 0px; 
-  display: flex; 
-  flex-direction: row;
-  flex-wrap: wrap;
-
+   display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 6px;
 }
 
+.container .genre{
+width: 95%;
+font-family: 'Avenir';
+margin-left: 15px;
+font-size: 1.3em;
+}
+.container .genre h2{
+font-size: 2em;
+}
 .container .boxb{
-	float: right;
+	float: left;
 	position: relative;
 	width: 340px;
 	height: 500px;
@@ -131,7 +133,7 @@ nav ul li{
 	padding: 17px;
 }
 .container .boxg{
-	float: right;
+	float: left;
 	position: relative;
 	width: 340px;
 	height: 500px;
@@ -142,10 +144,10 @@ nav ul li{
 }
 
 .boxb{
-	border: 10px solid gold;
+	border: 10px solid #7759A3;
 }
 .boxg{
-	border: 10px solid #BF0000;
+	border: 10px solid #7AF095;
 }
 .container .boxb .imgBox{
 	position: relative;
@@ -225,7 +227,6 @@ opacity: 1;
     margin-top: 0.25em;
     font-family: 'Avenir';
 }
-
 /* <------------- aside css --------------> */
 aside {
   display: block;
@@ -264,13 +265,29 @@ a:hover {
   border-bottom: 1px solid;     
 }
 
-h2{
+aside h2{
   font-size: 30px;
   padding: 15px 30px;
 }
+/*<----------------mediaqueries------------------------------->*/
+@media only screen and (max-width: 2070px) and (min-width: 1800px){
 
+header{
+  padding-left: 1%;
+  padding-right: 20%;
+}
+.container{
+float: right;
+  width: 80%;
+  background:#fff;
+  margin-left: 0px; 
+   display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 10px;
+}}
 /*<----------------mediaqueries 1370px------------------------------->*/
-@media only screen and (max-width: 1370px){
+@media only screen and  (min-width:1289px) and (max-width: 1370px){
  *{
   width: auto;
  }
@@ -279,7 +296,16 @@ header{
   padding-left: 1%;
   padding-right: 20%;
 }
-
+.container{
+float: right;
+  width: 80%;
+  background:#fff;
+  margin-left: 0px; 
+   display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 20px;
+}
 .titre{
   flex: 1;
   text-align: center;
@@ -326,11 +352,21 @@ aside {
   
 }}
 
-/*<----------------mediaqueries 1288px------------------------------->*/
-@media only screen and (min-width:1214px) and (max-width:1288px){
+/*<----------------mediaqueries 1292px------------------------------->*/
+@media only screen and (min-width:1243px) and (max-width:1292px){
  *{
   width: auto;
  }
+ .container{
+float: right;
+  width: 80%;
+  background:#fff;
+  margin-left: 0px; 
+   display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 20px;
+}
 
 .container .boxb{
 	float: right;
@@ -388,10 +424,20 @@ aside {
 }}
 
 /*<----------------mediaqueries 1134px------------------------------->*/
-@media only screen and (min-width:1134px) and (max-width: 1214px){
+@media only screen and (min-width:1134px) and (max-width: 1243px){
  *{
   width: auto;
  }
+ .container{
+float: right;
+  width: 80%;
+  background:#fff;
+  margin-left: 0px; 
+   display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 10px;
+}
 .container .boxb{
 	float: right;
 	position: relative;
@@ -447,13 +493,23 @@ aside {
   font-size: 35px;
 }}
 
-/*<----------------mediaqueries 1036px------------------------------->*/
-@media only screen and (min-width:1036px) and (max-width: 1134px){
+/*<----------------mediaqueries 1041px------------------------------->*/
+@media only screen and (min-width:1041px) and (max-width: 1134px){
  *{
   width: auto;
  }
 .titre{
   font-size: 30px;
+}
+.container{
+float: right;
+  width: 80%;
+  background:#fff;
+  margin-left: 0px; 
+   display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 10px;
 }
 .container .boxb{
 	float: right;
@@ -518,11 +574,21 @@ h2{
 }}
 
 
-/*<----------------mediaqueries 1036px------------------------------->*/
-@media only screen and (min-width:864px) and (max-width: 1036px){
+/*<----------------mediaqueries 1041px------------------------------->*/
+@media only screen and (min-width:864px) and (max-width: 1041px){
  *{
   width: auto;
  }
+ .container{
+float: right;
+  width: 80%;
+  background:#fff;
+  margin-left: 0px; 
+   display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 5px;
+}
 .container .boxb{
 	float: right;
 	position: relative;
@@ -599,7 +665,16 @@ h1 {
   text-align: center;
   font-size: 25px; 
 }
-
+.container{
+float: right;
+  width: 80%;
+  background:#fff;
+  margin-left: 0px; 
+   display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 5px;
+}
 .container .boxb{
 	float: right;
 	position: relative;
@@ -679,4 +754,3 @@ h2{
   font-size: 20px;
   padding: 10px 30px;
 }}
-
