--- a/pages/stylepage.css
+++ b/pages/stylepage.css
@@ -30,12 +30,14 @@ h1 {
 .content{
 float: right;
   width: 80%;
-  
+  background:#fff;
   margin-left: 0px; 
-  display: flex; 
+   display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-auto-rows: minmax(100px, auto);
+    grid-gap: 6px;
 }
 .content .text{
-  margin-right: 10%;
   font-family: 'Avenir';
 }
 .content .image{
@@ -102,4 +104,53 @@ h2{
   padding: 15px 30px;
 }
 
-/*<----------------mediaqueries 1420px------------------------------->*/
+/*<----------------mediaqueries------------------------------->*/
+@media only screen and (max-width: 869px){
+
+header{
+  padding-left: 1%;
+  padding-right: 20%;
+}
+.content {
+float: right;
+  width: 100%;
+  margin-left: 0px; 
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: minmax(100px, auto);
+}
+.content .image{
+  float:right;
+width: 218px;
+  height: 320px;
+  margin: 10px;
+  padding: 17px;
+  margin-top: 27px;
+}
+.content .image img{
+  max-width: 100%;
+  width: 299px;
+  height: 440px;
+}
+ .image:hover
+{
+  border: none;
+  transform: scale(1.2);
+  transition: 1s;
+}
+aside {
+    width: 100%;
+    padding-left: .5rem;
+    margin-left: .5rem;
+    float: right;
+}
+
+aside li {
+  text-decoration: none;
+  font-size: 15px;
+  padding-bottom: 7px;
+  font-weight: lighter; 
+}
+h2{
+  font-size: 20px;
+  padding: 10px 30px;}}
