--- a/genres/stylegenre.css
+++ b/genres/stylegenre.css
@@ -33,6 +33,7 @@ nav{
 	background-color: #000000;
 	position: sticky;
 	top: 0px;
+	z-index: 10;
 }
 
 nav ul{
@@ -72,12 +73,12 @@ nav > ul li:hover .sous{
 
 .sous li{
 	float: none;
-	width: 85%;
+	width: 100%;
 	text-align:left;
 }
 
 .sous a{
-	padding: 10px
+	padding: 10px;
 	border-bottom:none;
 }
 
@@ -91,8 +92,9 @@ nav > ul li:hover .sous{
 	box-shadow: 0px 1px 2px #E60000;
 	background-color: black;
 	position: absolute;
-	width: 85%;
+	width: 100%;
 	z-index: auto;
+	   
 }
 
 
@@ -106,7 +108,8 @@ float: right;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: minmax(100px, auto);
-  grid-gap: 6px;
+  grid-gap: 6px;z-index: 1;
+    overflow: hidden;
 }
 .container .genre{
 width: 95%;
@@ -684,4 +687,3 @@ h2{
   font-size: 20px;
   padding: 10px 30px;
 }}
-
