--- a/pages/stylepage.css
+++ b/pages/stylepage.css
@@ -59,7 +59,79 @@ float: right;
   transform: scale(1.2);
   transition: 1s;
 }
+/* <------------ nav css ------------->*/
 
+nav{
+  width: 100%;
+  margin: 0 auto;
+  background-color: #000000;
+  position: sticky;
+  top: 0px;
+  z-index: 10;
+}
+
+nav ul{
+  list-style-type: none;
+}
+
+nav ul li{
+  float: left;
+  width: 25%;
+  text-align: center;
+}
+
+
+nav a{
+  display: block;
+  text-decoration: none;
+  color: white;
+  border-bottom: 2px solid transparent;
+  padding: 10px 0px;
+}
+
+nav a:hover{
+  color: #E60000;
+  border-bottom: 2px solid gold;
+}
+
+nav > ul li:hover .sous{
+  display: block;
+}
+
+.sous li{
+  float: none;
+  width: 100%;
+  text-align:left;
+  overflow: hidden;
+}
+
+.sous a{
+  padding: 10px
+  border-bottom:none;
+  overflow: hidden;
+}
+
+.sous a:hover{
+  border-bottom: none;
+  background-color: rgba(200,200,200,0.5);
+}
+
+
+.sous{
+  display: none;
+  box-shadow: 0px 1px 2px #E60000;
+  background-color: black;
+  position: absolute;
+  width: 100%;
+  z-index: 10;
+}
+
+nav ul li{
+  float: left;
+  width: 25%;
+  text-align: center;
+  position: relative;
+}
 /* <------------- aside css --------------> */
 
 aside {
