--- a/contact/stylecontact.css
+++ b/contact/stylecontact.css
@@ -49,8 +49,8 @@ nav a{
 	padding: 10px 0px;
 }
 nav a:hover{
-	color: #E60000;
-	border-bottom: 2px solid gold;
+	color: white;
+	border-bottom: 2px solid red;
 }
 .sous{
 	display: none;
@@ -70,12 +70,11 @@ nav > ul li:hover .sous{
 	border-bottom:none;
 }
 .sous a:hover{
-	border-bottom: none;
-	background-color: rgba(200,200,200,0.5);
+border-bottom: 2px solid red;
 }
 .sous{
 	display: none;
-	box-shadow: 0px 1px 2px #E60000;
+	box-shadow: 0px 1px 2px;
 	background-color: black;
 	position: absolute;
 	width: 86%;
