--- a/pages/stylepage.css
+++ b/pages/stylepage.css
@@ -80,7 +80,6 @@ nav ul li{
   text-align: center;
 }
 
-
 nav a{
   display: block;
   text-decoration: none;
@@ -90,8 +89,7 @@ nav a{
 }
 
 nav a:hover{
-  color: #E60000;
-  border-bottom: 2px solid gold;
+   border-bottom: 2px solid red;
 }
 
 nav > ul li:hover .sous{
@@ -112,14 +110,12 @@ nav > ul li:hover .sous{
 }
 
 .sous a:hover{
-  border-bottom: none;
-  background-color: rgba(200,200,200,0.5);
+  border-bottom: 2px solid red;
 }
-
 
 .sous{
   display: none;
-  box-shadow: 0px 1px 2px #E60000;
+  box-shadow: 0px 1px 2px;
   background-color: black;
   position: absolute;
   width: 100%;
