--- a/style.css
+++ b/style.css
@@ -56,8 +56,7 @@ nav a{
 }
 
 nav a:hover{
-  color: #E60000;
-  border-bottom: 2px solid gold;
+   border-bottom: 2px solid red;
 }
 
 nav > ul li:hover .sous{
@@ -78,14 +77,12 @@ nav > ul li:hover .sous{
 }
 
 .sous a:hover{
-  border-bottom: none;
-  background-color: rgba(200,200,200,0.5);
+  border-bottom: 2px solid red;
 }
-
 
 .sous{
   display: none;
-  box-shadow: 0px 1px 2px #E60000;
+  box-shadow: 0px 1px 2px;
   background-color: black;
   position: absolute;
   width: 100%;
